# indexset

./: .gitignore  Cargo.toml  README.md  pyproject.toml
examples/: benchmark.py
src/: lib.rs
test/: test_indexset.py
