[package]
name = "indexset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "indexset"
crate-type = ["cdylib"]

[dependencies]
indexmap = "^2.2.6"

[dependencies.pyo3]
git = "https://github.com/PyO3/pyo3.git"
rev = "4fe5e8c689f58e80e399761dd77408556f769227"
features = ["py-clone"]
